<resources>
    <string name="app_name">Notebook</string>
    <string name="addNote">Добавить запись</string>
    <string name="noteName">Название заметки</string>
    <string name="noteDescription">Комментарий</string>
    <string name="note">Заметка</string>
    <string name="cancel">Отмена</string>
    <string name="done">Готово</string>
    <string name="dateAndTime">Дата и время:</string>
    <string name="delete">Удалить</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
</resources>